Uses mermaid-cli to generate SVG

--- a/package.json
+++ b/package.json
@@ -4,18 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "tsc && node ./dist/start.js ./grid-view.gs",
+    "start": "tsc && node ./dist/start.js ./grid-view.gs ./grid-view.mmd && mmdc -w 1600 -i ./grid-view.mmd -o ./grid-view.svg",
+    "start-no-compile": "node ./dist/start.js ./grid-view.gs ./grid-view.mmd && mmdc -w 1600 -i ./grid-view.mmd -o ./grid-view.svg",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Carter Butaud <carterbutaud@gmail.com>",
   "license": "UNLICENSED",
   "devDependencies": {
-    "@types/mermaid": "^8.2.7",
     "@types/node": "^16.4.12",
     "eslint": "^7.32.0",
     "typescript": "^4.3.5"
   },
   "dependencies": {
-    "mermaid": "^8.11.4"
+    "@mermaid-js/mermaid-cli": "^8.11.0"
   }
 }
