--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "tsc && node ./dist/start.js ./grid-view.gs ./grid-view.mmd && mmdc -w 1600 -i ./grid-view.mmd -o ./grid-view.svg",
+    "start": "tsc && node ./dist/start.js",
+    "generate-mmc": "node ./dist/generate-mmc.js",
     "start-no-compile": "node ./dist/start.js ./grid-view.gs ./grid-view.mmd && mmdc -w 1600 -i ./grid-view.mmd -o ./grid-view.svg",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
